# opti-FTA-P-C4

./: README.md  SPECIFICATIONS.md  extract_all.sh  notebook.py  notebook_electricore.py  notebook_legacy.py  notebook_zip_m2.py  opti_c4_marimo.py  pyproject.toml
layouts/: opti_c4_marimo.grid.json
